--- a/app.json
+++ b/app.json
@@ -1,5 +1,8 @@
 {
   "expo": {
-    "sdkVersion": "25.0.0"
+    "sdkVersion": "25.0.0",
+    "icon":"./asset/applogo.png",
+    "version": "1.0.0",
+    "name":"Geolocation"
   }
 }
