--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "sdkVersion": "25.0.0",
-    "icon":"./asset/applogo.png",
+    "icon":"./assets/applogo.png",
     "version": "1.0.0",
     "name":"Geolocation"
   }
