--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-addons-update": "^15.6.2",
     "react-dom": "^16.2.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
+    "react-native-device-detection": "^0.2.0",
     "react-navigation": "^1.5.8",
     "react-navigation-redux-helpers": "^1.0.3",
     "react-redux": "^5.0.7"
